[gd_scene load_steps=28 format=3 uid="uid://c00o8d8fh5hb1"]

[ext_resource type="Texture2D" uid="uid://bowg5tfj4q5p0" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Hit/Hit-Sheet.png" id="1_2l1a8"]
[ext_resource type="Script" path="res://Characters/Enemies/Bee/bee.gd" id="1_jf48g"]
[ext_resource type="Texture2D" uid="uid://ylps8e0v2qps" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Fly/Fly-Sheet.png" id="2_mynbd"]
[ext_resource type="Texture2D" uid="uid://brlq0uotpuoxg" path="res://art/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Attack/Attack-Sheet.png" id="3_omkkv"]
[ext_resource type="Script" path="res://Characters/Enemies/Bee/DamageableBee.gd" id="4_4yeis"]
[ext_resource type="Theme" uid="uid://b7enh4iqn5cqk" path="res://Characters/Enemies/Boar/EnemyHealthBarDesign.tres" id="6_hv7wm"]
[ext_resource type="Texture2D" uid="uid://6hu81drkb4uj" path="res://art/MenuArt/progress.png" id="7_rd4ej"]
[ext_resource type="Texture2D" uid="uid://d0fukwxmg05i2" path="res://art/MenuArt/over.png" id="8_ywx5m"]
[ext_resource type="Script" path="res://Characters/Enemies/Bee/CollisionShape2DBee.gd" id="9_6qkyv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_do3n0"]
radius = 13.0

[sub_resource type="Animation" id="Animation_negnr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8tdys"]
resource_name = "fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_mynbd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4n4h1"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_2l1a8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bixl1"]
resource_name = "sting"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_omkkv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StingDamage:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_405hi"]
_data = {
"RESET": SubResource("Animation_negnr"),
"fly": SubResource("Animation_8tdys"),
"hit": SubResource("Animation_4n4h1"),
"sting": SubResource("Animation_bixl1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jst8b"]
animation = &"fly"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ml757"]
animation = &"hit"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ptqk5"]
animation = &"sting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_regc0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xrs3e"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bsepc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qnkei"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ut20y"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_xg45o"]
states/fly/node = SubResource("AnimationNodeAnimation_jst8b")
states/fly/position = Vector2(354, 90)
states/hit/node = SubResource("AnimationNodeAnimation_ml757")
states/hit/position = Vector2(517, 151)
states/sting/node = SubResource("AnimationNodeAnimation_ptqk5")
states/sting/position = Vector2(507, 44)
transitions = ["Start", "fly", SubResource("AnimationNodeStateMachineTransition_regc0"), "fly", "sting", SubResource("AnimationNodeStateMachineTransition_xrs3e"), "sting", "fly", SubResource("AnimationNodeStateMachineTransition_bsepc"), "fly", "hit", SubResource("AnimationNodeStateMachineTransition_qnkei"), "sting", "hit", SubResource("AnimationNodeStateMachineTransition_ut20y")]

[sub_resource type="CircleShape2D" id="CircleShape2D_6jj5g"]
radius = 90.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_51wwn"]
radius = 9.0
height = 33.9959

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kcrvy"]
radius = 9.99997

[node name="Bee" type="CharacterBody2D" node_paths=PackedStringArray("damageable", "facing_direction")]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_jf48g")
damageable = NodePath("Damageable")
facing_direction = NodePath("StingDamage/CollisionShape2D")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("CircleShape2D_do3n0")
debug_color = Color(0.701961, 0.490196, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_omkkv")
hframes = 4

[node name="THealthbarBar" type="TextureProgressBar" parent="."]
offset_left = -22.0
offset_top = -35.0
offset_right = 21.0
offset_bottom = -29.0
theme = ExtResource("6_hv7wm")
theme_type_variation = &"EnemyHealthar"
max_value = 20.0
value = 10.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
texture_under = ExtResource("7_rd4ej")
texture_over = ExtResource("8_ywx5m")
texture_progress = ExtResource("7_rd4ej")
tint_under = Color(0, 0.203922, 0.203922, 1)
tint_over = Color(0.0509804, 0.0196078, 0, 1)
tint_progress = Color(0.764706, 0.0627451, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
autoplay = "fly"
libraries = {
"": SubResource("AnimationLibrary_405hi")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_xg45o")
anim_player = NodePath("../AnimationPlayer")

[node name="Damageable" type="Node" parent="."]
script = ExtResource("4_4yeis")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_6jj5g")

[node name="StingAnim" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StingAnim"]
position = Vector2(0, 8)
rotation = -1.55517
shape = SubResource("CapsuleShape2D_51wwn")

[node name="StingDamage" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StingDamage"]
position = Vector2(-7, 3)
rotation = -0.00235269
shape = SubResource("CapsuleShape2D_kcrvy")
debug_color = Color(0.988235, 0, 0.305882, 0.419608)
script = ExtResource("9_6qkyv")
facing_left_position = Vector2(-7, 3)
facing_right_position = Vector2(7, 3)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="StingAnim" to="." method="_on_sting_body_entered"]
[connection signal="body_exited" from="StingAnim" to="." method="_on_sting_body_exited"]
[connection signal="body_entered" from="StingDamage" to="." method="_on_sting_damage_body_entered"]
